Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_mymediauploadcloud.yml
+++ b/.github/workflows/main_mymediauploadcloud.yml
@@ -42,9 +42,7 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -54,13 +52,6 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_F5A25EE567624E7CB5354FE96639169B }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_FB381A01F1D348A3B5983F2E679823B8 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_7ED4C9C0838845FA9473998F5FFE44D6 }}
-
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -68,4 +59,4 @@ jobs:
           app-name: 'myMediaUploadCloud'
           slot-name: 'Production'
           package: .
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1728FE93ED5743049752B8812CB51B0C }}
