Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_mymediauploadcloud.yml
+++ b/.github/workflows/main_mymediauploadcloud.yml
@@ -42,7 +42,9 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+    permissions:
+      id-token: write #This is required for requesting the JWT
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -52,6 +54,13 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
       
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_375918937F554744A15B955FAA094934 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_277A428F27014F4EA3E25B0F5342D31C }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_330AC7CFBBC74125A6F0C97B3963E41D }}
+
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -59,4 +68,4 @@ jobs:
           app-name: 'myMediaUploadCloud'
           slot-name: 'Production'
           package: .
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1728FE93ED5743049752B8812CB51B0C }}
+          
